--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Genscape Team 8", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Source", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Ryan Ransford, Nathan Cole, Raghava Maddikara, Mark Doolin, Mike Frohme</p>
         </footer>
     </div>
 
