--- a/GenscapeTeam8/Views/Home/Index.cshtml
+++ b/GenscapeTeam8/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Motion Detector</h1>
+    <p class="lead">Motion Detector is a web-based tool for receiving notifications about motion occurring in an image stream.</p>
 </div>
 <div class="row">
     <div class="col-md-4">
