--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Image Sources", "Index", "Sources", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Notifications", "Index", "Notifications", new { area = "" }, null)</li>
                 </ul>
