--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Genscape Team 8", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Genscape Team 8", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Image Sources", "Index", "Sources", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Notifications", "Index", "Notifications", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Image Sources", "Index", "Sources", null, null)</li>
+                    <li>@Html.ActionLink("Notifications", "Index", "Notifications", null, null)</li>
                 </ul>
             </div>
         </div>
