--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using GenscapeTeam8;
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -16,12 +17,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Genscape Team 8", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Image Sources", "Index", "Sources", null, null)</li>
-                    <li>@Html.ActionLink("Notifications", "Index", "Notifications", null, null)</li>
+                    <li>@Html.MenuLink("Home", "Index", "Home")</li>
+                    <li>@Html.MenuLink("Image Sources", "Index", "Sources")</li>
+                    <li>@Html.MenuLink("Notifications", "Index", "Notifications")</li>
                 </ul>
             </div>
         </div>
