Yeah, so HtmlHelpers needed to be a static class

--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.MenuLink("Home", "Index", "Home")</li>
-                    <li>@Html.MenuLink("Image Sources", "Index", "Sources")</li>
-                    <li>@Html.MenuLink("Notifications", "Index", "Notifications")</li>
+                    @Html.MenuLink("Home", "Index", "Home")
+                    @Html.MenuLink("Image Sources", "Index", "Sources")
+                    @Html.MenuLink("Notifications", "Index", "Notifications")
                 </ul>
             </div>
         </div>
