changing navbar from fixed to default

--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @Html.MenuLink("Home", "Index", "Home")
+                    @Html.MenuLink("Motion Detector", "Index", "Home")
                     @Html.MenuLink("Image Sources", "Index", "Sources")
                     @Html.MenuLink("Notifications", "Index", "Notifications")
                 </ul>
