Starting on some drill-down

--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @Html.MenuLink("Motion Detector", "Index", "Home")
-                    @Html.MenuLink("Image Sources", "Index", "Sources")
+                    @Html.MenuLink("Facilities", "Index", "Facilities")
+                    @Html.MenuLink("Cameras", "Index", "Cameras")
+                    @Html.MenuLink("Watch Points", "Index", "WatchPoints")
                     @Html.MenuLink("Notifications", "Index", "Notifications")
                 </ul>
             </div>
