--- a/GenscapeTeam8/Views/Shared/_Layout.cshtml
+++ b/GenscapeTeam8/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     @Html.MenuLink("Facilities", "Index", "Facilities")
                     @Html.MenuLink("Cameras", "Index", "Cameras")
                     @Html.MenuLink("Watch Points", "Index", "WatchPoints")
-                    @Html.MenuLink("Notifications", "Index", "Notifications")
+                    @Html.MenuLink("Events", "Index", "Events")
                 </ul>
             </div>
         </div>
