Trying to make tables somewhat consistent

--- a/GenscapeTeam8/Views/Facilities/Index.cshtml
+++ b/GenscapeTeam8/Views/Facilities/Index.cshtml
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
     <div class="col-lg-12">
-        <table class="table zebra-table">
+        <table class="table table-condensed table-striped">
             <thead>
                 <tr>
                     <th>Name</th>
