fix for partial using jquery

--- a/GenscapeTeam8/Views/Cameras/_ChartTest.cshtml
+++ b/GenscapeTeam8/Views/Cameras/_ChartTest.cshtml
@@ -6,14 +6,15 @@
     var height = activeWatchPoints.Count() * 20;
 }
 
-<h2>Chart Test</h2>
+<h2>Chart Test stuff</h2>
 
 <canvas id="watchPointGraph" height="@height" width="1000">
 
 </canvas>
 
-@section scripts{
+@*@section scripts{*@
 
+@Bundle.
     <script type="text/javascript">
 
         $(document).ready(function () {
@@ -55,5 +56,6 @@
 
     </script>
 
-}
+
+
 
