--- a/GenscapeTeam8/Views/Events/Index.cshtml
+++ b/GenscapeTeam8/Views/Events/Index.cshtml
@@ -9,9 +9,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-6">
         <table class="table table-condensed table-striped">
             <tr>
+                <th></th>
                 <th>
                     @Html.DisplayNameFor(model => model.StartTime)
                 </th>
@@ -21,12 +22,14 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Notes)
                 </th>
-                <th></th>
             </tr>
 
             @foreach (var item in Model)
             {
                 <tr>
+                    <td>
+                        <a href="/Events/Details/@item.EventID" title="View Details"><span class="glyphicon glyphicon-search"></span></a>
+                    </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.StartTime)
                     </td>
@@ -35,9 +38,6 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Notes)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Details", "Details", new { id = item.EventID })
                     </td>
                 </tr>
             }
