--- a/GenscapeTeam8/Views/Cameras/_ChartTest.cshtml
+++ b/GenscapeTeam8/Views/Cameras/_ChartTest.cshtml
@@ -46,6 +46,7 @@
                         var x = timediff.TotalHours / windowInHours * 1000;
                         var w = (ev.EndTime - ev.StartTime).TotalHours / windowInHours * 1000;
                         @:ctx.fillRect(@x, @h, @w, 20);
+                        @:// test comment
                     }
                 }
             }
