--- a/GenscapeTeam8/Views/Cameras/_ChartTest.cshtml
+++ b/GenscapeTeam8/Views/Cameras/_ChartTest.cshtml
@@ -38,7 +38,7 @@
                     
                     
                     var watchPoint = activeWatchPoints[wpi];
-                    var events = watchPoint.Events.Where(e => e.StartTime > startime).ToList();
+                    var events = watchPoint.Events.Where(e => e.StartTime.ToUniversalTime() > startime.ToUniversalTime()).ToList();
                     
                     foreach (var ev in events)
                     {
